fixed text overflow mobile bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -308,6 +308,7 @@ Post Layouts
   }
   p{
     margin-top: 0.3em;
+    overflow: hidden;
   }
   li{
     font-size: 0.95rem;
